--- a/backend/themes/default/templates/settings.html
+++ b/backend/themes/default/templates/settings.html
@@ -4,6 +4,15 @@
         <h2>Settings</h2>
         <v-container fluid class="mt-4">
 
+            <v-row class="ml-4 mt-2">
+                <v-btn
+                        color="success"
+                        @click="saveSettings"
+                        outlined
+                >
+                    Save Settings
+                </v-btn>
+            </v-row>
             <v-row>
                 <v-col cols="12" md="6">
                     <v-card dark flat>
@@ -97,16 +106,6 @@
                         </v-card-text>
                     </v-card>
                 </v-col>
-            </v-row>
-
-            <v-row justify="center" class="mt-4">
-                <v-btn
-                        color="success"
-                        @click="saveSettings"
-                        outlined
-                >
-                    Save Settings
-                </v-btn>
             </v-row>
 
         </v-container>
