--- a/backend/themes/default/templates/dashboard.html
+++ b/backend/themes/default/templates/dashboard.html
@@ -80,7 +80,7 @@
                 <v-card>
                     <v-data-table
                             :headers="headers"
-                            :items="desserts"
+                            :items="visits"
                             :items-per-page="5"
                             class="elevation-1"
                     ></v-data-table>
@@ -89,8 +89,8 @@
             <v-col cols="4">
                 <v-card>
                     <v-data-table
-                            :headers="headers"
-                            :items="desserts"
+                            :headers="headers2"
+                            :items="visits"
                             :items-per-page="5"
                             class="elevation-1"
                     ></v-data-table>
@@ -171,108 +171,65 @@
                     }
                 },
                 headers: [
-                    {
-                        text: 'Dessert (100g serving)',
-                        align: 'start',
-                        sortable: false,
-                        value: 'name',
-                    },
-                    {text: 'Calories', value: 'calories'},
-                    {text: 'Fat (g)', value: 'fat'},
-                    {text: 'Carbs (g)', value: 'carbs'},
-                    {text: 'Protein (g)', value: 'protein'},
-                    {text: 'Iron (%)', value: 'iron'},
-                ],
-                desserts: [
-                    {
-                        name: 'Frozen Yogurt',
-                        calories: 159,
-                        fat: 6.0,
-                        carbs: 24,
-                        protein: 4.0,
-                        iron: 1,
-                    },
-                    {
-                        name: 'Ice cream sandwich',
-                        calories: 237,
-                        fat: 9.0,
-                        carbs: 37,
-                        protein: 4.3,
-                        iron: 1,
-                    },
-                    {
-                        name: 'Eclair',
-                        calories: 262,
-                        fat: 16.0,
-                        carbs: 23,
-                        protein: 6.0,
-                        iron: 7,
-                    },
-                    {
-                        name: 'Cupcake',
-                        calories: 305,
-                        fat: 3.7,
-                        carbs: 67,
-                        protein: 4.3,
-                        iron: 8,
-                    },
-                    {
-                        name: 'Gingerbread',
-                        calories: 356,
-                        fat: 16.0,
-                        carbs: 49,
-                        protein: 3.9,
-                        iron: 16,
-                    },
-                    {
-                        name: 'Jelly bean',
-                        calories: 375,
-                        fat: 0.0,
-                        carbs: 94,
-                        protein: 0.0,
-                        iron: 0,
-                    },
-                    {
-                        name: 'Lollipop',
-                        calories: 392,
-                        fat: 0.2,
-                        carbs: 98,
-                        protein: 0,
-                        iron: 2,
-                    },
-                    {
-                        name: 'Honeycomb',
-                        calories: 408,
-                        fat: 3.2,
-                        carbs: 87,
-                        protein: 6.5,
-                        iron: 45,
-                    },
-                    {
-                        name: 'Donut',
-                        calories: 452,
-                        fat: 25.0,
-                        carbs: 51,
-                        protein: 4.9,
-                        iron: 22,
-                    },
-                    {
-                        name: 'KitKat',
-                        calories: 518,
-                        fat: 26.0,
-                        carbs: 65,
-                        protein: 7,
-                        iron: 6,
-                    },
-                ],
+    { text: 'IP', value: 'ip' },
+    { text: 'Country', value: 'country' },
+    { text: 'Url', value: 'url' },
+    { text: 'Referrer', value: 'referrer' },
+    { text: 'Time', value: 'received_at' },
+],
+                headers2: [
+    { text: 'IP', value: 'ip' },
+    { text: 'Country', value: 'country' },
+    { text: 'Referrer', value: 'referrer' },
+    { text: 'Time', value: 'received_at' },
+],
+                visits: [],
 
             }
         },
+        mounted() {
+            this.loadData();
+            this.$root.$on('load-dashboard', this.loadData);
+        },
+
         computed: {
             dateRangeText() {
                 return this.date_range.join(' ~ ')
             },
         },
+
+        methods:
+        {
+            loadData(date) {
+                fetch('/backend/api/dashboard/visits')
+                    .then(res => res.json())
+                    .then(data => {
+                        this.visits = data;
+                    });
+
+                fetch('/backend/api/dashboard/metrics')
+                  .then(res => res.json())
+                  .then(data => {
+                    this.metrics = [
+                      { title: 'Clicks', value: data.metrics.clicks, color: 'blue darken-2' },
+                      { title: 'Unique Clicks', value: data.metrics.unique_clicks, color: 'indigo darken-2' },
+                      { title: 'Conversions', value: data.metrics.conversions, color: 'deep-purple darken-2' },
+                      { title: 'Cost', value: `$${data.metrics.cost}`, color: 'red darken-2' },
+                      { title: 'Revenue', value: `$${data.metrics.revenue}`, color: 'green darken-2' },
+                      { title: 'ROI', value: data.metrics.roi, color: 'teal darken-2' }
+                    ];
+
+                    this.mainChart.chartOptions.xaxis.categories = data.chart.labels;
+                    this.mainChart.series = [
+                      { name: 'Clicks', data: data.chart.clicks },
+                      { name: 'Conversions', data: data.chart.conversions },
+                      { name: 'Unique Clicks', data: data.chart.unique_clicks }
+                    ];
+                  });
+
+            },
+
+        }
     });
 </script>
 {% endraw %}
